y.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | error '\n'
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC
   25       | LC DefList error RC

   26 StmtList: Stmt StmtList
   27         | %empty

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt
   34     | error ERROR SEMI

   35 $@1: %empty

   36 Stmt: ERROR $@1 error SEMI
   37     | error ERROR error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 14
error (256) 14 25 34 36 37 41
INT (258) 18 62
FLOAT (259) 63
ID (260) 13 16 17 19 20 57 58 60 61
SEMI (261) 4 5 28 30 34 36 37 40 41
COMMA (262) 8 21 43 64
ASSIGNOP (263) 45 46
RELOP (264) 49
PLUS (265) 50
MINUS (266) 51 55
STAR (267) 52
DIV (268) 53
AND (269) 47
OR (270) 48
DOT (271) 60
NOT (272) 56
TYPE (273) 9
LP (274) 19 20 31 32 33 54 57 58
RP (275) 19 20 31 32 33 54 57 58
LB (276) 18 59
RB (277) 18 59
LC (278) 11 24 25
RC (279) 11 24 25
STRUCT (280) 11 12
RETURN (281) 30
IF (282) 31 32
ELSE (283) 32
WHILE (284) 33
ERROR (285) 34 36 37
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 4 5 6, on right: 2
ExtDecList (37)
    on left: 7 8, on right: 4 8
Specifier (38)
    on left: 9 10, on right: 4 5 6 23 40 41
StructSpecifier (39)
    on left: 11 12, on right: 10
OptTag (40)
    on left: 13 14 15, on right: 11
Tag (41)
    on left: 16, on right: 12
VarDec (42)
    on left: 17 18, on right: 7 8 18 23 44 45
FunDec (43)
    on left: 19 20, on right: 6
VarList (44)
    on left: 21 22, on right: 19 21
ParamDec (45)
    on left: 23, on right: 21 22
CompSt (46)
    on left: 24 25, on right: 6 29
StmtList (47)
    on left: 26 27, on right: 24 26
Stmt (48)
    on left: 28 29 30 31 32 33 34 36 37, on right: 26 31 32 33
$@1 (49)
    on left: 35, on right: 36
DefList (50)
    on left: 38 39, on right: 11 24 25 38
Def (51)
    on left: 40 41, on right: 38
DecList (52)
    on left: 42 43, on right: 40 43
Dec (53)
    on left: 44 45, on right: 42 43
Exp (54)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    on right: 28 30 31 32 33 45 46 47 48 49 50 51 52 53 54 55 56 59
    60 64 65
Args (55)
    on left: 64 65, on right: 57 64


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 15 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   14 OptTag: error . '\n'

    '\n'  shift, and go to state 19


State 9

   13 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 11

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 7 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   14 OptTag: error '\n' .

    $default  reduce using rule 14 (OptTag)


State 20

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 21

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


State 24

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 25

   24 CompSt: LC . DefList StmtList RC
   25       | LC . DefList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error SEMI

    error  shift, and go to state 38
    ID     shift, and go to state 34

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


State 28

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


State 29

   38 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 29


State 30

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 31

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 44


State 32

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 45


State 33

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 46

    $default  reduce using rule 22 (VarList)


State 34

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 35

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 36

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


State 37

   24 CompSt: LC DefList . StmtList RC
   25       | LC DefList . error RC

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    ERROR   shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


State 38

   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 63


State 39

   18 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 64
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


State 40

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 65


State 41

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 42 (DecList)


State 42

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 43

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 44

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 45

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 46

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 67
    ParamDec         go to state 33


State 47

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 48

   25 CompSt: LC DefList error . RC
   34 Stmt: error . ERROR SEMI
   37     | error . ERROR error SEMI

    RC     shift, and go to state 68
    ERROR  shift, and go to state 69


State 49

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 50

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 51

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 61 (Exp)


State 52

   55 Exp: MINUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 71


State 53

   56 Exp: NOT . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 72


State 54

   54 Exp: LP . Exp RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 73


State 55

   30 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 74


State 56

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 57

   33 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 58

   36 Stmt: ERROR . $@1 error SEMI

    $default  reduce using rule 35 ($@1)

    $@1  go to state 77


State 59

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 60

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 61

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 79
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    ERROR   shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 80
    Stmt      go to state 61
    Exp       go to state 62


State 62

   28 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 63

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 64

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54

    Exp  go to state 92


State 65

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 66

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 39
    DecList  go to state 93
    Dec      go to state 41


State 67

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 68

   25 CompSt: LC DefList error RC .

    $default  reduce using rule 25 (CompSt)


State 69

   34 Stmt: error ERROR . SEMI
   37     | error ERROR . error SEMI

    error  shift, and go to state 94
    SEMI   shift, and go to state 95


State 70

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    MINUS  shift, and go to state 52
    NOT    shift, and go to state 53
    LP     shift, and go to state 54
    RP     shift, and go to state 96

    Exp   go to state 97
    Args  go to state 98


State 71

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    STAR  shift, and go to state 86
    DIV   shift, and go to state 87
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 55 (Exp)


State 72

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 56 (Exp)


State 73

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 99
    LB        shift, and go to state 91


State 74

   30 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
